add image upload feature

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ JWT_ACTIVATION_KEY = IO4UJAJ4859AS@&@9UQSDGKAJDS
 SMTP_USERNAME=shahadat.rucse@gmail.com
 SMTP_PASSWORD=iommpsaupjlmplul
 CLIENT_URL=http://localhost:3001
+UPLOAD_FILE=public/images/users
