add filter to check image size and types

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,5 @@ SMTP_USERNAME=shahadat.rucse@gmail.com
 SMTP_PASSWORD=iommpsaupjlmplul
 CLIENT_URL=http://localhost:3001
 UPLOAD_FILE=public/images/users
+MAX_FILE_SIZE=2097152
+ALLOWED_FILE_TYPES=jpg,jpeg,png
