--- a/server/package.json
+++ b/server/package.json
@@ -17,14 +17,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.0.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "slugify": "^1.6.6",
+    "winston": "^3.13.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
